--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Podium DEV",
       "request": "launch",
       "type": "dart",
-      "args": ["--dart-define-from-file=env/dev.json"]
+      "args": [""]
     },
     {
       "name": "Podium STAGE",
